# aria-voice-agent

./: .gitignore  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/agent/: graph.py  memory.py  tools.py
backend/db/: aria.db  database.py
backend/llm/: providers.py
backend/rag/: ingest.py  retriever.py
frontend/: app.js  index.html  style.css
